# lab-ecosystem

./: .gitignore  LICENSE  README.md
affiliate_links/: .env.example  README.md  __init__.py  advcake.py  backfill_books.py  build_nginx_map.py  verify_erid.py
audio_skill/: .env.example  CHANGELOG.md  README.md  SKILL.md  audit.py
book_project/: 00-seed.md  01-intent.md  02-logline.md  03-protagonist.md  03-world.md  04-synopsis.md  05-outline.md  06-practice.md  08-revision-notes.md  README.md
chief-agent/: .env.example  .gitignore  README.md  deploy-chief.ps1  package.json
coach_agent/: .env.example  .gitignore  CHANGELOG.md  PRD.md  README.md  RUNBOOK.md  keepalive.py  pyproject.toml  render.yaml
coach_agent/.github/workflows/: test.yml
coach_agent/agent/: config.py  main.py  utils.py
coach_agent/agent/ai/: claude_client.py  factory.py  fake_client.py  prompts.py  tools.py  yandex_client.py
coach_agent/agent/api/: chat.py  deps.py  desires.py  onboarding.py  schemas.py  sessions.py  tones.py  workbook.py
coach_agent/agent/api/middleware/: __init__.py  ratelimit.py
coach_agent/agent/channels/: base.py  router.py  vk.py  vk_unbound.py  web.py
coach_agent/agent/core/: crisis.py  decomp.py  decomposer.py  detector.py  idle.py  message_bus.py  onboarding.py  session.py  state_machine.py  states.py  tones.py  workbook.py  workbook_parser.py
coach_agent/agent/services/: __init__.py  crisis_followup.py
coach_agent/agent/storage/: d1_client.py  d1_client_async.py  migrations.py  models.py  repository.py
coach_agent/tests/: conftest.py  factories.py  smoke_storage.py  test_cost_budget.py  test_crisis.py  test_crisis_followup.py  test_decomp.py  test_detector.py  test_health.py  test_migrations.py  test_ratelimit.py  test_state.py  test_tones.py  test_vk.py  test_web.py  test_workbook.py
coach_agent/tests/fixtures/workbooks/atomic_habits/: workbook.md
coach_agent/tests/fixtures/workbooks/deep_work/: deep_work.md
coach_agent/tests/fixtures/workbooks/mindset/: mindset.md
content_ideas_skill/: .env.example  README.md  SKILL.md  config.yaml
detector_vk_app/: README.md  index.html
english_skill/: .env.example  CHANGELOG.md  README.md  SKILL.md
excel_skill/: README.md  SKILL.md
experiments_bot/: .env.example  README.md  requirements.txt  smoke_test_api.py
experiments_vk_app/: README.md  index.html
expert-reviews-hub/: README.md  SKILL.md
image_skill/: .env.example  CHANGELOG.md  README.md  SKILL.md
kednet_agent/: README.md  kednet_agent.config.json  kednet_agent.py  requirements.txt
lab_site/: .gitignore  astro.config.mjs  (+6 more)
whitewill_ai_engine/: .env.example  .gitignore  README.md  pyproject.toml
whitewill_ai_engine/data/: egrn_changes.json  fssp_records.json  inheritance.json  properties.json
whitewill_ai_engine/docs/: pitch.md
whitewill_ai_engine/docs/pitch_assets/: cover_letter.md  dialogs.json  metrics.json  offmarket.json
whitewill_ai_engine/outreach/: 00-README.md  01-tg-bot.md  02-email-hello.md  03-experum.md
whitewill_ai_engine/scripts/: build_pitch_pdf.py  collect_pitch_data.py
whitewill_ai_engine/src/concierge/: __init__.py  bot.py  crm.py  prompts.py  rag.py  schemas.py  server.py
whitewill_ai_engine/src/demo/: dashboard.py  seed_data.py
whitewill_ai_engine/src/offmarket/: __init__.py  notifier.py  scanner.py  scorer.py  server.py
whitewill_ai_engine/src/shared/: __init__.py  config.py  db.py  i18n.py  llm.py  models.py
whitewill_ai_engine/tests/: smoke_test.py
(+844 files in other folders)
